--- a/app/src/main/res/layout/fragment_word_details.xml
+++ b/app/src/main/res/layout/fragment_word_details.xml
@@ -30,6 +30,31 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 tools:text="ˈap(ə)l" />
+
+            <TextView
+                android:id="@+id/translation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:textAppearance="?attr/textAppearanceBody1"
+                tools:text="Яблуко" />
+
+            <TextView
+                android:id="@+id/meaning"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textAppearance="?attr/textAppearanceBody2"
+                tools:text="A red round fruit" />
+
+            <TextView
+                android:id="@+id/example"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textAppearance="?attr/textAppearanceBody2"
+                tools:text="He took a bite out of the apple" />
+
         </LinearLayout>
     </ScrollView>
 
