--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_letterListFragment_to_wordListFragment"
             app:destination="@id/wordListFragment" />
+        <action
+            android:id="@+id/action_letterListFragment_to_addNewWordFragment"
+            app:destination="@id/addNewWordFragment" />
     </fragment>
     <fragment
         android:id="@+id/wordListFragment"
@@ -25,6 +28,9 @@
         <action
             android:id="@+id/action_wordListFragment_to_wordDetailsFragment"
             app:destination="@id/wordDetailsFragment" />
+        <action
+            android:id="@+id/action_wordListFragment_to_addNewWordFragment"
+            app:destination="@id/addNewWordFragment" />
     </fragment>
     <fragment
         android:id="@+id/wordDetailsFragment"
@@ -35,4 +41,9 @@
             android:name="word"
             app:argType="string" />
     </fragment>
+    <fragment
+        android:id="@+id/addNewWordFragment"
+        android:name="com.laupdev.yourdictionary.ui.AddNewWordFragment"
+        android:label="@string/add_new_word"
+        tools:layout="@layout/fragment_add_new_word" />
 </navigation>
