--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,24 +26,32 @@
             android:name="letter"
             app:argType="string" />
         <action
-            android:id="@+id/action_wordListFragment_to_wordDetailsFragment"
-            app:destination="@id/wordDetailsFragment" />
-        <action
             android:id="@+id/action_wordListFragment_to_addNewWordFragment"
             app:destination="@id/addNewWordFragment" />
+        <action
+            android:id="@+id/action_wordListFragment_to_wordDetailsFragment"
+            app:destination="@id/wordDetailsFragment" />
     </fragment>
     <fragment
         android:id="@+id/wordDetailsFragment"
         android:name="com.laupdev.yourdictionary.ui.WordDetailsFragment"
-        android:label="@string/word_details_fragment_label"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_word_details">
         <argument
-            android:name="word"
-            app:argType="string" />
+            android:name="word_id"
+            app:argType="integer" />
+        <action
+            android:id="@+id/action_wordDetailsFragment_to_addNewWordFragment"
+            app:destination="@id/addNewWordFragment" />
     </fragment>
     <fragment
         android:id="@+id/addNewWordFragment"
         android:name="com.laupdev.yourdictionary.ui.AddNewWordFragment"
         android:label="@string/add_new_word"
-        tools:layout="@layout/fragment_add_new_word" />
+        tools:layout="@layout/fragment_add_new_word" >
+        <argument
+            android:name="word_id"
+            app:argType="integer"
+            android:defaultValue="0" />
+    </fragment>
 </navigation>
