--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,7 +20,7 @@
     <fragment
         android:id="@+id/wordListFragment"
         android:name="com.laupdev.yourdictionary.ui.WordListFragment"
-        android:label="@string/word_list_fragment_label"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_word_list">
         <argument
             android:name="letter"
@@ -47,11 +47,11 @@
     <fragment
         android:id="@+id/addNewWordFragment"
         android:name="com.laupdev.yourdictionary.ui.AddNewWordFragment"
-        android:label="@string/add_new_word"
-        tools:layout="@layout/fragment_add_new_word" >
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_add_new_word">
         <argument
             android:name="word_id"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            app:argType="integer" />
     </fragment>
 </navigation>
