--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -1,7 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/button_item"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:padding="8dp" />
+    android:layout_height="55dp"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/rounded_corners"
+    android:paddingStart="16dp"
+    android:paddingTop="5dp"
+    android:paddingEnd="16dp"
+    android:paddingBottom="8dp">
+
+    <RelativeLayout
+        android:id="@+id/word_container"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/pronounce_word"
+        android:layout_marginEnd="16dp">
+
+        <TextView
+            android:id="@+id/word"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_bold"
+            android:textColor="@color/color_white"
+            android:textSize="16sp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            tools:text="access" />
+
+        <TextView
+            android:id="@+id/translation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto_regular"
+            android:textColor="@color/color_white"
+            android:textSize="14sp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            tools:text="доступ" />
+
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/add_to_favorite"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/add_word_to_favorite"
+        android:src="@drawable/ic_star_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/color_white" />
+
+    <ImageView
+        android:id="@+id/pronounce_word"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="@string/pronounce_word"
+        android:src="@drawable/ic_volume_up_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/add_to_favorite"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/color_white" />
+
+    <!--    <Button-->
+
+    <!--        style="@style/WordItemButton"-->
+    <!--        android:id="@+id/button_item"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:backgroundTint="@color/color_grey_lighter"-->
+    <!--        android:layout_margin="0dp"-->
+    <!--        android:paddingLeft="16dp"-->
+    <!--        android:paddingTop="6dp"-->
+    <!--        android:paddingRight="16dp"-->
+    <!--        android:paddingBottom="8dp" />-->
+
+</androidx.constraintlayout.widget.ConstraintLayout>
