--- a/app/src/main/res/layout/fragment_word_details.xml
+++ b/app/src/main/res/layout/fragment_word_details.xml
@@ -1,77 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.WordDetailsFragment">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/top_app_bar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/word_details_menu"
+            app:navigationIcon="@drawable/ic_arrow_back_24"
+            app:title="@string/vocabulary_tab" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
+            android:id="@+id/word_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="25dp">
 
-                <TextView
-                    android:id="@+id/word"
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?attr/textAppearanceHeadline3"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@id/search_translation_btn"
+                    android:orientation="vertical"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="Apple" />
+                    app:layout_constraintEnd_toStartOf="@id/buttons"
+                    android:layout_marginEnd="16dp">
 
-                <TextView
-                    android:id="@+id/search_translation_btn"
+                    <TextView
+                        android:id="@+id/word"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/TextAppearance.Yocabulary.Word"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="access" />
+
+                    <TextView
+                        android:id="@+id/transcription"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:textAppearance="@style/TextAppearance.Yocabulary.Transcription"
+                        tools:text="[ˈækˌsɛs]" />
+
+                    <TextView
+                        android:id="@+id/translation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:textAppearance="@style/TextAppearance.Yocabulary.Translation"
+                        tools:text="Яблуко" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/buttons"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/search_word_btn"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    android:layout_marginEnd="5dp"
+                    android:orientation="vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageButton
+                        android:id="@+id/add_to_favorite"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="15dp"
+                        android:background="@drawable/btn_selector_shape_in_word"
+                        android:contentDescription="@string/add_word_to_favorite"
+                        android:elevation="2dp"
+                        android:src="@drawable/ic_star_24"
+                        app:tint="@color/color_white" />
+
+                    <ImageButton
+                        android:id="@+id/pronounce_word"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:background="@drawable/btn_selector_shape_in_word"
+                        android:contentDescription="@string/add_word_to_favorite"
+                        android:elevation="2dp"
+                        android:src="@drawable/ic_volume_up_24"
+                        app:tint="@color/color_white" />
+
+
+                </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/transcription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                tools:text="ˈap(ə)l" />
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical">-->
 
-            <TextView
-                android:id="@+id/translation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:textAppearance="?attr/textAppearanceBody1"
-                tools:text="Яблуко" />
+<!--                <TextView-->
+<!--                    android:id="@+id/part_of_speech"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:textAppearance="@style/TextAppearance.Yocabulary.PartOfSpeech"-->
+<!--                    tools:text="- transitive verb (отримати доступ)" />-->
 
-            <TextView
-                android:id="@+id/meaning"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textAppearance="?attr/textAppearanceBody2"
-                tools:text="A red round fruit" />
+<!--                <TextView-->
+<!--                    android:id="@+id/meaning"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="4dp"-->
+<!--                    android:textAppearance="@style/TextAppearance.Yocabulary.Meaning"-->
+<!--                    tools:text="1. Approach or enter (a place)" />-->
 
-            <TextView
-                android:id="@+id/example"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textAppearance="?attr/textAppearanceBody2"
-                tools:text="He took a bite out of the apple" />
+<!--                <TextView-->
+<!--                    android:id="@+id/example"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="8dp"-->
+<!--                    android:textAppearance="@style/TextAppearance.Yocabulary.Example"-->
+<!--                    tools:text="Single rooms have private baths accessed via the balcony" />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/synonyms_header"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="8dp"-->
+<!--                    android:text="@string/synonyms_header"-->
+<!--                    android:textAppearance="@style/TextAppearance.Yocabulary.PartOfSpeech"-->
+<!--                    android:textSize="16sp" />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/synonym_words"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="4dp"-->
+<!--                    android:textAppearance="@style/TextAppearance.Yocabulary.SynonymWords"-->
+<!--                    tools:text="retrieve, gain, gain access to, acquire, obtain" />-->
+
+<!--            </LinearLayout>-->
 
         </LinearLayout>
     </ScrollView>
@@ -85,4 +167,4 @@
         android:contentDescription="@string/edit_word"
         android:src="@drawable/ic_edit_24" />
 
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
