--- a/app/src/main/res/layout/fragment_word_list.xml
+++ b/app/src/main/res/layout/fragment_word_list.xml
@@ -8,12 +8,10 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:liftOnScroll="true">
+        android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/word_list_toolbar"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
+            android:id="@+id/top_app_bar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:layout_scrollFlags="scroll|enterAlways|snap"
@@ -26,14 +24,13 @@
             android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll|enterAlways|snap"
             app:tabInlineLabel="true"
-            app:tabMode="fixed"
-            style="@style/Widget.YourDictionary.TabLayout">
+            app:tabMode="fixed">
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/ic_order_alphabetical_24"
-                android:text="@string/my_words_tab"/>
+                android:text="@string/my_words_tab" />
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
@@ -47,7 +44,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -56,7 +53,7 @@
             android:id="@+id/word_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/rounded_corners"
             android:textCursorDrawable="@null"
             app:iconifiedByDefault="false"
