--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="55dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:background="@drawable/rounded_corners"
     android:paddingStart="16dp"
     android:paddingTop="5dp"
