--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/wordListFragment"
-        android:name="com.laupdev.yourdictionary.ui.WordListFragment"
+        android:name="com.laupdev.yocabulary.ui.WordListFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_word_list">
         <argument
@@ -22,7 +22,7 @@
     </fragment>
     <fragment
         android:id="@+id/wordDetailsFragment"
-        android:name="com.laupdev.yourdictionary.ui.WordDetailsFragment"
+        android:name="com.laupdev.yocabulary.ui.WordDetailsFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_word_details">
         <argument
@@ -31,10 +31,15 @@
         <action
             android:id="@+id/action_wordDetailsFragment_to_addNewWordFragment"
             app:destination="@id/addNewWordFragment" />
+        <action
+            android:id="@+id/action_wordDetailsFragment_to_wordListFragment"
+            app:destination="@id/wordListFragment"
+            app:popUpTo="@id/wordListFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/addNewWordFragment"
-        android:name="com.laupdev.yourdictionary.ui.AddNewWordFragment"
+        android:name="com.laupdev.yocabulary.ui.AddNewWordFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_add_new_word">
         <argument
