Added functionality for adding new "Part of speech" fields in fragment_add_new_word

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,6 @@
 <resources>
     <item name="part_of_speech" type="id" />
     <item name="synonym_words" type="id" />
+    <item name="part_of_speech_block" type="id" />
+    <item name="part_of_speech_dropdown" type="id" />
 </resources>
