--- a/app/src/main/res/layout/fragment_add_new_word.xml
+++ b/app/src/main/res/layout/fragment_add_new_word.xml
@@ -30,134 +30,142 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/new_word"
-                style="@style/Widget.Yocabulary.TextInputLayout"
+            <LinearLayout
+                android:id="@+id/add_word_fields"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/new_word">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/new_word_edit_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text"
-                    tools:text="access" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:orientation="vertical">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/transcription"
+                    android:id="@+id/new_word"
                     style="@style/Widget.Yocabulary.TextInputLayout"
-                    android:layout_width="220dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/transcription"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:hint="@string/new_word">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/transcription_edit_text"
+                        android:id="@+id/new_word_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="text" />
+                        android:inputType="text"
+                        tools:text="access" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/search_in_dictionary"
-                    android:layout_width="120dp"
-                    android:layout_height="0dp"
-                    android:backgroundTint="@color/color_grey_lighter"
-                    android:fontFamily="@font/poppins_medium"
-                    android:insetTop="0dp"
-                    android:insetBottom="0dp"
-                    android:text="@string/search_in_dictionary"
-                    android:textSize="12sp"
-                    app:cornerRadius="12dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/part_of_speech"
-                style="@style/Widget.Yocabulary.TextInputLayout.FilledBox.ExposedDropdownMenu"
-                android:layout_width="220dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:hint="@string/part_of_speech">
-
-                <AutoCompleteTextView
-                    android:id="@+id/part_of_speech_dropdown"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:dropDownHeight="300dp"
-                    android:inputType="none"
-                    tools:ignore="LabelFor" />
+                    android:layout_marginTop="10dp">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/transcription"
+                        style="@style/Widget.Yocabulary.TextInputLayout"
+                        android:layout_width="220dp"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/transcription"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/translation"
-                style="@style/Widget.Yocabulary.TextInputLayout"
-                android:layout_width="220dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:hint="@string/translation">
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/transcription_edit_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="text" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/translation_edit_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/search_in_dictionary"
+                        android:layout_width="120dp"
+                        android:layout_height="0dp"
+                        android:backgroundTint="@color/color_grey_lighter"
+                        android:fontFamily="@font/poppins_medium"
+                        android:insetTop="0dp"
+                        android:insetBottom="0dp"
+                        android:text="@string/search_in_dictionary"
+                        android:textSize="12sp"
+                        app:cornerRadius="12dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/meaning"
-                style="@style/Widget.Yocabulary.TextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:hint="@string/meaning">
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/meaning_edit_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text" />
+<!--                <com.google.android.material.textfield.TextInputLayout-->
+<!--                    android:id="@+id/part_of_speech"-->
+<!--                    style="@style/Widget.Yocabulary.TextInputLayout.FilledBox.ExposedDropdownMenu"-->
+<!--                    android:layout_width="220dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    android:hint="@string/part_of_speech">-->
 
-            </com.google.android.material.textfield.TextInputLayout>
+<!--                    <AutoCompleteTextView-->
+<!--                        android:id="@+id/part_of_speech_dropdown"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:dropDownHeight="300dp"-->
+<!--                        android:inputType="none"-->
+<!--                        tools:ignore="LabelFor" />-->
 
-            <com.google.android.material.textfield.TextInputLayout
+<!--                </com.google.android.material.textfield.TextInputLayout>-->
 
-                android:id="@+id/example"
-                style="@style/Widget.Yocabulary.TextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:hint="@string/example">
+<!--                <com.google.android.material.textfield.TextInputLayout-->
+<!--                    android:id="@+id/translation"-->
+<!--                    style="@style/Widget.Yocabulary.TextInputLayout"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    android:hint="@string/translation">-->
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/example_edit_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text" />
+<!--                    <com.google.android.material.textfield.TextInputEditText-->
+<!--                        android:id="@+id/translation_edit_text"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:inputType="text" />-->
 
-            </com.google.android.material.textfield.TextInputLayout>
+<!--                </com.google.android.material.textfield.TextInputLayout>-->
+
+<!--                <com.google.android.material.textfield.TextInputLayout-->
+<!--                    android:id="@+id/meaning"-->
+<!--                    style="@style/Widget.Yocabulary.TextInputLayout"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    android:hint="@string/meaning">-->
+
+<!--                    <com.google.android.material.textfield.TextInputEditText-->
+<!--                        android:id="@+id/meaning_edit_text"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:inputType="text" />-->
+
+<!--                </com.google.android.material.textfield.TextInputLayout>-->
+
+<!--                <com.google.android.material.textfield.TextInputLayout-->
+
+<!--                    android:id="@+id/example"-->
+<!--                    style="@style/Widget.Yocabulary.TextInputLayout"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    android:hint="@string/example">-->
+
+<!--                    <com.google.android.material.textfield.TextInputEditText-->
+<!--                        android:id="@+id/example_edit_text"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:inputType="text" />-->
+
+<!--                </com.google.android.material.textfield.TextInputLayout>-->
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/add_definition"
                 style="@style/Widget.Yocabulary.AddButton"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
-                android:text="@string/add_definition"
+                android:text="@string/add_meaning"
                 app:icon="@drawable/ic_add_24" />
 
             <Button
