--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -4,4 +4,5 @@
     <item name="synonym_words" type="id" />
     <item name="part_of_speech_block" type="id" />
     <item name="part_of_speech_dropdown" type="id" />
+    <item name="meaning_block" type="id" />
 </resources>
