--- a/app/src/main/res/layout/view_part_of_speech.xml
+++ b/app/src/main/res/layout/view_part_of_speech.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/part_of_speech"
@@ -12,12 +13,12 @@
         android:layout_marginTop="10dp"
         android:hint="@string/part_of_speech">
 
-    <AutoCompleteTextView
-        android:id="@+id/part_of_speech_dropdown"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:dropDownHeight="300dp"
-        android:inputType="none"/>
+        <AutoCompleteTextView
+            android:id="@+id/part_of_speech_dropdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:dropDownHeight="300dp"
+            android:inputType="none" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -37,37 +38,53 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/meaning"
-        style="@style/Widget.Yocabulary.TextInputLayout"
+    <LinearLayout
+        android:id="@+id/meanings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="@string/meaning">
+        android:orientation="vertical">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/meaning_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text" />
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--            android:id="@+id/meaning"-->
+<!--            style="@style/Widget.Yocabulary.TextInputLayout"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:hint="@string/meaning">-->
 
-    </com.google.android.material.textfield.TextInputLayout>
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:id="@+id/meaning_edit_text"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:inputType="text" />-->
 
-    <com.google.android.material.textfield.TextInputLayout
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
 
-        android:id="@+id/example"
-        style="@style/Widget.Yocabulary.TextInputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="@string/example">
+<!--        <com.google.android.material.textfield.TextInputLayout-->
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/example_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text" />
+<!--            android:id="@+id/example"-->
+<!--            style="@style/Widget.Yocabulary.TextInputLayout"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:hint="@string/example">-->
 
-    </com.google.android.material.textfield.TextInputLayout>
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                android:id="@+id/example_edit_text"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:inputType="text" />-->
+
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/add_meaning"
+        style="@style/Widget.Yocabulary.AddButton"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:text="@string/add_meaning"
+        app:icon="@drawable/ic_add_24" />
 
 </LinearLayout>
