Updated database tables and Dao-s

--- a/app/src/main/res/values/string_parts_of_speech.xml
+++ b/app/src/main/res/values/string_parts_of_speech.xml
@@ -9,6 +9,7 @@
         <item>Preposition</item>
         <item>Conjunction</item>
         <item>Interjection</item>
-        <item>Unknown</item>
+        <item>Other</item>
+        <item>None</item>
     </string-array>
 </resources>
