--- a/app/src/main/res/layout/view_part_of_speech.xml
+++ b/app/src/main/res/layout/view_part_of_speech.xml
@@ -5,22 +5,43 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/part_of_speech"
-        style="@style/Widget.Yocabulary.TextInputLayout.FilledBox.ExposedDropdownMenu"
-        android:layout_width="220dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/pos_constraint_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="@string/part_of_speech">
+        android:layout_marginTop="10dp">
 
-        <AutoCompleteTextView
-            android:id="@+id/part_of_speech_dropdown"
-            android:layout_width="match_parent"
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/part_of_speech"
+            style="@style/Widget.Yocabulary.TextInputLayout.FilledBox.ExposedDropdownMenu"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
-            android:dropDownHeight="300dp"
-            android:inputType="none" />
+            android:hint="@string/part_of_speech"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <AutoCompleteTextView
+                android:id="@+id/part_of_speech_dropdown"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:dropDownHeight="300dp"
+                android:inputType="none" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <ImageButton
+            android:id="@+id/remove_part_of_speech"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/color_grey"
+            android:contentDescription="@string/remove_part_of_speech"
+            android:src="@drawable/ic_cancel_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/part_of_speech"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/translation"
@@ -44,38 +65,38 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-<!--        <com.google.android.material.textfield.TextInputLayout-->
-<!--            android:id="@+id/meaning"-->
-<!--            style="@style/Widget.Yocabulary.TextInputLayout"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            android:hint="@string/meaning">-->
+        <!--        <com.google.android.material.textfield.TextInputLayout-->
+        <!--            android:id="@+id/meaning"-->
+        <!--            style="@style/Widget.Yocabulary.TextInputLayout"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="10dp"-->
+        <!--            android:hint="@string/meaning">-->
 
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:id="@+id/meaning_edit_text"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:inputType="text" />-->
+        <!--            <com.google.android.material.textfield.TextInputEditText-->
+        <!--                android:id="@+id/meaning_edit_text"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:inputType="text" />-->
 
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
+        <!--        </com.google.android.material.textfield.TextInputLayout>-->
 
-<!--        <com.google.android.material.textfield.TextInputLayout-->
+        <!--        <com.google.android.material.textfield.TextInputLayout-->
 
-<!--            android:id="@+id/example"-->
-<!--            style="@style/Widget.Yocabulary.TextInputLayout"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            android:hint="@string/example">-->
+        <!--            android:id="@+id/example"-->
+        <!--            style="@style/Widget.Yocabulary.TextInputLayout"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="10dp"-->
+        <!--            android:hint="@string/example">-->
 
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:id="@+id/example_edit_text"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:inputType="text" />-->
+        <!--            <com.google.android.material.textfield.TextInputEditText-->
+        <!--                android:id="@+id/example_edit_text"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:inputType="text" />-->
 
-<!--        </com.google.android.material.textfield.TextInputLayout>-->
+        <!--        </com.google.android.material.textfield.TextInputLayout>-->
 
     </LinearLayout>
 
