Updated AddNewWordFragment.kt and WordDetailsFragment.kt

--- a/app/src/main/res/layout/view_meaning.xml
+++ b/app/src/main/res/layout/view_meaning.xml
@@ -4,21 +4,38 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/meaning"
-        style="@style/Widget.Yocabulary.TextInputLayout"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:hint="@string/meaning">
+        android:layout_marginTop="10dp">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/meaning_edit_text"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/meaning"
+            style="@style/Widget.Yocabulary.TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:hint="@string/meaning">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/meaning_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <ImageButton
+            android:id="@+id/remove_meaning"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center"
+            android:layout_marginEnd="6dp"
+            android:background="#00000000"
+            android:padding="9dp"
+            android:contentDescription="@string/remove_meaning"
+            android:src="@drawable/ic_cancel_24" />
+
+    </FrameLayout>
 
     <com.google.android.material.textfield.TextInputLayout
 
@@ -31,6 +48,23 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/example_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+
+        android:id="@+id/synonyms"
+        style="@style/Widget.Yocabulary.TextInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:hint="@string/synonyms">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/synonyms_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
