--- a/app/src/main/res/layout/fragment_word_details.xml
+++ b/app/src/main/res/layout/fragment_word_details.xml
@@ -61,7 +61,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:textAppearance="@style/TextAppearance.Yocabulary.Transcription"
-                        tools:text="[ˈækˌsɛs]" />
+                        tools:text="[ˈækˌsɛs]"/>
 
                     <TextView
                         android:id="@+id/translation"
@@ -92,6 +92,19 @@
                         android:elevation="2dp"
                         android:src="@drawable/ic_star_24"
                         app:tint="@color/color_white" />
+
+                    <ImageButton
+                        android:id="@+id/add_to_vocabulary"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="15dp"
+                        android:background="@drawable/btn_selector_shape_in_word"
+                        android:contentDescription="@string/add_word_to_vocabulary"
+                        android:elevation="2dp"
+                        android:src="@drawable/ic_add_24"
+                        app:tint="@color/color_white"
+                        android:visibility="gone"/>
 
                     <ImageButton
                         android:id="@+id/pronounce_word"
