--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,7 +27,8 @@
         tools:layout="@layout/fragment_word_details">
         <argument
             android:name="word_id"
-            app:argType="integer" />
+            app:argType="long"
+            android:defaultValue="0L" />
         <action
             android:id="@+id/action_wordDetailsFragment_to_addNewWordFragment"
             app:destination="@id/addNewWordFragment" />
@@ -36,6 +37,10 @@
             app:destination="@id/wordListFragment"
             app:popUpTo="@id/wordListFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="word_name"
+            app:argType="string"
+            android:defaultValue="0" />
     </fragment>
     <fragment
         android:id="@+id/addNewWordFragment"
@@ -44,7 +49,7 @@
         tools:layout="@layout/fragment_add_new_word">
         <argument
             android:name="word_id"
-            android:defaultValue="0"
-            app:argType="integer" />
+            app:argType="long"
+            android:defaultValue="0L" />
     </fragment>
 </navigation>
